Profile gap on small device fixed

--- a/src/features/profile/styles/ProfilePage.css
+++ b/src/features/profile/styles/ProfilePage.css
@@ -55,6 +55,7 @@
   overflow: hidden;
 }
 
+
 .profile-overview-name {
   font-size: 1.75rem;
   font-weight: 700;
@@ -118,6 +119,7 @@
   }
 
   .profile-overview-main {
+    flex: 0 0 auto;
     height: fit-content;
     width: fit-content;
     max-height: fit-content;
